# sober

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SoberConfig.cmake.in  build-ios.sh  build-libcxx.sh  build-xcode.sh  install-ios-nocodesign.sh  install-ios.sh  install-libcxx.sh  install-xcode.sh
Source/example/: empty.cpp  openweathermap.cpp  sugar.cmake
Source/sober/: Exit.hpp  config.hpp  sober.hpp  sugar.cmake
Source/sober/asserts/: sober_assert.hpp  sugar.cmake
Source/sober/log/: Logger.cpp  Logger.hpp  Severity.cpp  Severity.fpp  Severity.hpp  attributes.cpp  attributes.hpp  sugar.cmake
Source/sober/network/: Engine.cpp  Engine.fpp  Engine.hpp  Engine.ipp  sugar.cmake
Source/sober/network/api/: OpenWeatherMap.cpp  OpenWeatherMap.hpp  sugar.cmake
Source/sober/network/api/unittest/: OpenWeatherMap.cpp  sugar.cmake
Source/sober/network/http/: ConnectManager.cpp  ConnectManager.hpp  ConnectManager.ipp  ExtraSuccessHandler.hpp  Request.cpp  Request.fpp  Request.hpp  Request.ipp  Response.cpp  Response.hpp  Response.ipp  Sink.fpp  Sink.hpp  Statistic.cpp  Statistic.hpp  Stream.cpp  Stream.fpp  Stream.hpp  sugar.cmake
Source/sober/network/http/delegate/: Interface.cpp  Interface.fpp  Interface.hpp  Json.cpp  Json.hpp  Reconnect.cpp  Reconnect.hpp  Retry.cpp  Retry.hpp  String.cpp  String.hpp  Timeout.cpp  Timeout.hpp  sugar.cmake
Source/sober/network/http/request/: Method.cpp  Method.fpp  Method.hpp  Request.cpp  Request.fpp  Request.hpp  sugar.cmake
Source/sober/network/http/response/: Parser.hpp  Parser.ipp  Response.cpp  Response.hpp  Response.ipp  sugar.cmake
Source/sober/network/http/response/attribute/: ChunkSize.hpp  ContentLength.hpp  HTAB.hpp  Header.hpp  Location.hpp  ObsText.hpp  ReasonPhrase.hpp  Response.hpp  SP.hpp  StatusCode.cpp  StatusCode.fpp  StatusCode.hpp  StatusLine.hpp  TEXT.hpp  TransferEncoding.hpp  VCHAR.hpp  sugar.cmake
Source/sober/network/http/response/grammar/: CR.hpp  CRLF.hpp  CTL.hpp  ChunkSize.hpp  ContentLength.hpp  HT.hpp  HTAB.hpp  HTTPVersion.hpp  Header.hpp  LF.hpp  LWS.hpp  Location.hpp  MessageBody.hpp  ObsText.hpp  ReasonPhrase.hpp  Response.hpp  SP.hpp  StatusCode.hpp  StatusLine.hpp  TEXT.hpp  TransferEncoding.hpp  VCHAR.hpp  common.hpp  sugar.cmake
Source/sober/network/http/response/unittest/: Parser.cpp
Source/sober/network/http/sink/: String.cpp  String.hpp  sugar.cmake
Source/sober/network/http/unittest/: Response.cpp  Response.fpp  sugar.cmake
Source/sober/network/unittest/: Engine.cpp  Long.cpp  sugar.cmake
Source/sober/utils/: Test.cpp  Test.hpp  always.hpp  run_duration.hpp  sugar.cmake
cmake/: SoberConfig.cmake.in
cmake/Hunter/: config.cmake
